--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,12 @@ env:
   IMAGES: "cloudstack-csi-driver cloudstack-csi-sc-syncer"
 
 jobs:
+  always_run:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "This job always runs"
+
+jobs:
   push:
     name: Push images
     runs-on: ubuntu-20.04
